// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-node should add a new blogpost and update linkedNodes 1`] = `
Object {
  "author___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m",
  "body___NODE": "uzfinxahlog0___c2XTZRrfbMRcfdyFSo4mrORbodyTextNode",
  "children": Array [
    "uzfinxahlog0___c2XTZRrfbMRcfdyFSo4mrORdescriptionTextNode",
    "uzfinxahlog0___c2XTZRrfbMRcfdyFSo4mrORbodyTextNode",
  ],
  "contentful_id": "2XTZRrfbMRcfdyFSo4mrOR",
  "createdAt": "2020-04-09T10:59:16.604Z",
  "description___NODE": "uzfinxahlog0___c2XTZRrfbMRcfdyFSo4mrORdescriptionTextNode",
  "heroImage___NODE": "uzfinxahlog0___c21xFOvxOk9guLHTakpnezz",
  "id": "uzfinxahlog0___c2XTZRrfbMRcfdyFSo4mrOR",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulBlogPost",
  },
  "node_locale": "en-US",
  "parent": "Blog Post",
  "publishDate": "2020-04-01T00:00+00:00",
  "slug": "integration-tests",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "blogPost",
        "id": "blogPost",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
  },
  "title": "Integration tests",
  "updatedAt": "2020-04-09T10:59:16.604Z",
}
`;

exports[`gatsby-node should add a new blogpost and update linkedNodes 2`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___c31TNnjHlfaGUoMOwU0M2og",
    "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke",
    "uzfinxahlog0___c2PtC9h1YqIA6kaUaIsWEQ0",
    "uzfinxahlog0___c2XTZRrfbMRcfdyFSo4mrOR",
  ],
  "children": Array [
    "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0mshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-04-09T10:53:01.487Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m",
  "image___NODE": "uzfinxahlog0___c7orLdboQQowIUs22KAW4U",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "en-US",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0mshortBioTextNode",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 2,
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-04-09T10:55:54.432Z",
}
`;

exports[`gatsby-node should add a new blogpost and update linkedNodes 3`] = `
Object {
  "author___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nl",
  "body___NODE": "uzfinxahlog0___c2XTZRrfbMRcfdyFSo4mrOR___nlbodyTextNode",
  "children": Array [
    "uzfinxahlog0___c2XTZRrfbMRcfdyFSo4mrOR___nldescriptionTextNode",
    "uzfinxahlog0___c2XTZRrfbMRcfdyFSo4mrOR___nlbodyTextNode",
  ],
  "contentful_id": "2XTZRrfbMRcfdyFSo4mrOR",
  "createdAt": "2020-04-09T10:59:16.604Z",
  "description___NODE": "uzfinxahlog0___c2XTZRrfbMRcfdyFSo4mrOR___nldescriptionTextNode",
  "heroImage___NODE": "uzfinxahlog0___c21xFOvxOk9guLHTakpnezz___nl",
  "id": "uzfinxahlog0___c2XTZRrfbMRcfdyFSo4mrOR___nl",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulBlogPost",
  },
  "node_locale": "nl",
  "parent": "Blog Post",
  "publishDate": "2020-04-01T00:00+00:00",
  "slug": "integration-tests",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "blogPost",
        "id": "blogPost",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
  },
  "title": "Integration tests",
  "updatedAt": "2020-04-09T10:59:16.604Z",
}
`;

exports[`gatsby-node should add a new blogpost and update linkedNodes 4`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___c31TNnjHlfaGUoMOwU0M2og___nl",
    "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke___nl",
    "uzfinxahlog0___c2PtC9h1YqIA6kaUaIsWEQ0___nl",
    "uzfinxahlog0___c2XTZRrfbMRcfdyFSo4mrOR___nl",
  ],
  "children": Array [
    "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nlshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-04-09T10:53:01.487Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nl",
  "image___NODE": "uzfinxahlog0___c7orLdboQQowIUs22KAW4U___nl",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "nl",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nlshortBioTextNode",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 2,
  },
  "title": "Web developer",
  "twitter": "johndoe",
  "updatedAt": "2020-04-09T10:55:54.432Z",
}
`;

exports[`gatsby-node should remove a blogpost and update linkedNodes 1`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___c31TNnjHlfaGUoMOwU0M2og",
    "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke",
    "uzfinxahlog0___c2PtC9h1YqIA6kaUaIsWEQ0",
  ],
  "children": Array [
    "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0mshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-04-09T10:53:01.487Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m",
  "image___NODE": "uzfinxahlog0___c7orLdboQQowIUs22KAW4U",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "en-US",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0mshortBioTextNode",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 2,
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-04-09T10:55:54.432Z",
}
`;

exports[`gatsby-node should remove a blogpost and update linkedNodes 2`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___c31TNnjHlfaGUoMOwU0M2og___nl",
    "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke___nl",
    "uzfinxahlog0___c2PtC9h1YqIA6kaUaIsWEQ0___nl",
  ],
  "children": Array [
    "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nlshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-04-09T10:53:01.487Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nl",
  "image___NODE": "uzfinxahlog0___c7orLdboQQowIUs22KAW4U___nl",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "nl",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nlshortBioTextNode",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 2,
  },
  "title": "Web developer",
  "twitter": "johndoe",
  "updatedAt": "2020-04-09T10:55:54.432Z",
}
`;

exports[`gatsby-node should update a blogpost 1`] = `
Object {
  "author___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m",
  "body___NODE": "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6KebodyTextNode",
  "children": Array [
    "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6KedescriptionTextNode",
    "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6KebodyTextNode",
  ],
  "contentful_id": "3K9b0esdy0q0yGqgW2g6Ke",
  "createdAt": "2020-04-09T10:53:01.485Z",
  "description___NODE": "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6KedescriptionTextNode",
  "heroImage___NODE": "uzfinxahlog0___c6Od9v3wzLOysiMum0Wkmme",
  "id": "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulBlogPost",
  },
  "node_locale": "en-US",
  "parent": "Blog Post",
  "publishDate": "2017-05-15T00:00+02:00",
  "slug": "hello-world",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "blogPost",
        "id": "blogPost",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 2,
  },
  "tags": Array [
    "general",
  ],
  "title": "Hello world 1234",
  "updatedAt": "2020-04-09T11:01:27.357Z",
}
`;

exports[`gatsby-node should update a blogpost 2`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___c31TNnjHlfaGUoMOwU0M2og",
    "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke",
    "uzfinxahlog0___c2PtC9h1YqIA6kaUaIsWEQ0",
    "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke",
  ],
  "children": Array [
    "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0mshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-04-09T10:53:01.487Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m",
  "image___NODE": "uzfinxahlog0___c7orLdboQQowIUs22KAW4U",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "en-US",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0mshortBioTextNode",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 2,
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-04-09T10:55:54.432Z",
}
`;

exports[`gatsby-node should update a blogpost 3`] = `
Object {
  "author___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nl",
  "body___NODE": "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke___nlbodyTextNode",
  "children": Array [
    "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke___nldescriptionTextNode",
    "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke___nlbodyTextNode",
  ],
  "contentful_id": "3K9b0esdy0q0yGqgW2g6Ke",
  "createdAt": "2020-04-09T10:53:01.485Z",
  "description___NODE": "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke___nldescriptionTextNode",
  "heroImage___NODE": "uzfinxahlog0___c6Od9v3wzLOysiMum0Wkmme___nl",
  "id": "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke___nl",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulBlogPost",
  },
  "node_locale": "nl",
  "parent": "Blog Post",
  "publishDate": "2017-05-15T00:00+02:00",
  "slug": "hello-world",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "blogPost",
        "id": "blogPost",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 2,
  },
  "tags": Array [
    "general",
  ],
  "title": "Hello world 1234",
  "updatedAt": "2020-04-09T11:01:27.357Z",
}
`;

exports[`gatsby-node should update a blogpost 4`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___c31TNnjHlfaGUoMOwU0M2og___nl",
    "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke___nl",
    "uzfinxahlog0___c2PtC9h1YqIA6kaUaIsWEQ0___nl",
    "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke___nl",
  ],
  "children": Array [
    "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nlshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-04-09T10:53:01.487Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nl",
  "image___NODE": "uzfinxahlog0___c7orLdboQQowIUs22KAW4U___nl",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "nl",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nlshortBioTextNode",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 2,
  },
  "title": "Web developer",
  "twitter": "johndoe",
  "updatedAt": "2020-04-09T10:55:54.432Z",
}
`;
